server/antlr/server/grammar/tlangParser.ts
// Generated from server/grammar/tlang.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { tlangListener } from "./tlangListener";
import { tlangVisitor } from "./tlangVisitor";


export class tlangParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly PLUS = 24;
	public static readonly MINUS = 25;
	public static readonly MUL = 26;
	public static readonly DIV = 27;
	public static readonly MOD = 28;
	public static readonly EXPO = 29;
	public static readonly PENCOND = 30;
	public static readonly LT = 31;
	public static readonly GT = 32;
	public static readonly EQ = 33;
	public static readonly NEQ = 34;
	public static readonly LTE = 35;
	public static readonly GTE = 36;
	public static readonly AND = 37;
	public static readonly OR = 38;
	public static readonly NOT = 39;
	public static readonly NUM = 40;
	public static readonly VAR = 41;
	public static readonly NAME = 42;
	public static readonly STRING = 43;
	public static readonly Whitespace = 44;
	public static readonly RULE_start = 0;
	public static readonly RULE_instruction_list = 1;
	public static readonly RULE_strict_ilist = 2;
	public static readonly RULE_instruction = 3;
	public static readonly RULE_assignment = 4;
	public static readonly RULE_arrayAssignment = 5;
	public static readonly RULE_conditional = 6;
	public static readonly RULE_ifConditional = 7;
	public static readonly RULE_ifElseConditional = 8;
	public static readonly RULE_loop = 9;
	public static readonly RULE_moveCommand = 10;
	public static readonly RULE_moveOp = 11;
	public static readonly RULE_penCommand = 12;
	public static readonly RULE_gotoCommand = 13;
	public static readonly RULE_pauseCommand = 14;
	public static readonly RULE_printfCommand = 15;
	public static readonly RULE_printArg = 16;
	public static readonly RULE_printList = 17;
	public static readonly RULE_functionDecl = 18;
	public static readonly RULE_paramList = 19;
	public static readonly RULE_functionCallCommand = 20;
	public static readonly RULE_functionCall = 21;
	public static readonly RULE_argList = 22;
	public static readonly RULE_returnCommand = 23;
	public static readonly RULE_arrayDecl = 24;
	public static readonly RULE_arrayAccessCommand = 25;
	public static readonly RULE_arrayAccess = 26;
	public static readonly RULE_expression = 27;
	public static readonly RULE_exponentiative = 28;
	public static readonly RULE_multiplicative = 29;
	public static readonly RULE_additive = 30;
	public static readonly RULE_unaryArithOp = 31;
	public static readonly RULE_condition = 32;
	public static readonly RULE_binCondOp = 33;
	public static readonly RULE_logicOp = 34;
	public static readonly RULE_value = 35;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "instruction_list", "strict_ilist", "instruction", "assignment", 
		"arrayAssignment", "conditional", "ifConditional", "ifElseConditional", 
		"loop", "moveCommand", "moveOp", "penCommand", "gotoCommand", "pauseCommand", 
		"printfCommand", "printArg", "printList", "functionDecl", "paramList", 
		"functionCallCommand", "functionCall", "argList", "returnCommand", "arrayDecl", 
		"arrayAccessCommand", "arrayAccess", "expression", "exponentiative", "multiplicative", 
		"additive", "unaryArithOp", "condition", "binCondOp", "logicOp", "value",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'='", "'{'", "'}'", "'if'", "'['", "']'", "'else'", "'repeat'", 
		"'forward'", "'backward'", "'left'", "'right'", "'penup'", "'pendown'", 
		"'goto'", "'('", "','", "')'", "'pause'", "'printf'", "'function'", "'return'", 
		"'array'", "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", "'pendown?'", "'<'", 
		"'>'", "'=='", "'!='", "'<='", "'>='", "'&&'", "'||'", "'!'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "PLUS", "MINUS", "MUL", "DIV", "MOD", 
		"EXPO", "PENCOND", "LT", "GT", "EQ", "NEQ", "LTE", "GTE", "AND", "OR", 
		"NOT", "NUM", "VAR", "NAME", "STRING", "Whitespace",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(tlangParser._LITERAL_NAMES, tlangParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return tlangParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "tlang.g4"; }

	// @Override
	public get ruleNames(): string[] { return tlangParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return tlangParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(tlangParser._ATN, this);
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let _localctx: StartContext = new StartContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, tlangParser.RULE_start);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 72;
			this.instruction_list();
			this.state = 73;
			this.match(tlangParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public instruction_list(): Instruction_listContext {
		let _localctx: Instruction_listContext = new Instruction_listContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, tlangParser.RULE_instruction_list);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << tlangParser.T__3) | (1 << tlangParser.T__7) | (1 << tlangParser.T__8) | (1 << tlangParser.T__9) | (1 << tlangParser.T__10) | (1 << tlangParser.T__11) | (1 << tlangParser.T__12) | (1 << tlangParser.T__13) | (1 << tlangParser.T__14) | (1 << tlangParser.T__18) | (1 << tlangParser.T__19) | (1 << tlangParser.T__20) | (1 << tlangParser.T__21) | (1 << tlangParser.T__22))) !== 0) || _la === tlangParser.VAR || _la === tlangParser.NAME) {
				{
				{
				this.state = 75;
				this.instruction();
				}
				}
				this.state = 80;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public strict_ilist(): Strict_ilistContext {
		let _localctx: Strict_ilistContext = new Strict_ilistContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, tlangParser.RULE_strict_ilist);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 82;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 81;
				this.instruction();
				}
				}
				this.state = 84;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << tlangParser.T__3) | (1 << tlangParser.T__7) | (1 << tlangParser.T__8) | (1 << tlangParser.T__9) | (1 << tlangParser.T__10) | (1 << tlangParser.T__11) | (1 << tlangParser.T__12) | (1 << tlangParser.T__13) | (1 << tlangParser.T__14) | (1 << tlangParser.T__18) | (1 << tlangParser.T__19) | (1 << tlangParser.T__20) | (1 << tlangParser.T__21) | (1 << tlangParser.T__22))) !== 0) || _la === tlangParser.VAR || _la === tlangParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public instruction(): InstructionContext {
		let _localctx: InstructionContext = new InstructionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, tlangParser.RULE_instruction);
		try {
			this.state = 100;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 86;
				this.assignment();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 87;
				this.arrayAssignment();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 88;
				this.conditional();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 89;
				this.loop();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 90;
				this.moveCommand();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 91;
				this.penCommand();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 92;
				this.gotoCommand();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 93;
				this.pauseCommand();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 94;
				this.printfCommand();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 95;
				this.functionDecl();
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 96;
				this.returnCommand();
				}
				break;

			case 12:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 97;
				this.functionCallCommand();
				}
				break;

			case 13:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 98;
				this.arrayDecl();
				}
				break;

			case 14:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 99;
				this.arrayAccessCommand();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assignment(): AssignmentContext {
		let _localctx: AssignmentContext = new AssignmentContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, tlangParser.RULE_assignment);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 102;
			this.match(tlangParser.VAR);
			this.state = 103;
			this.match(tlangParser.T__0);
			this.state = 104;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arrayAssignment(): ArrayAssignmentContext {
		let _localctx: ArrayAssignmentContext = new ArrayAssignmentContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, tlangParser.RULE_arrayAssignment);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 106;
			this.match(tlangParser.VAR);
			this.state = 107;
			this.match(tlangParser.T__1);
			this.state = 108;
			this.expression(0);
			this.state = 109;
			this.match(tlangParser.T__2);
			this.state = 110;
			this.match(tlangParser.T__0);
			this.state = 111;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public conditional(): ConditionalContext {
		let _localctx: ConditionalContext = new ConditionalContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, tlangParser.RULE_conditional);
		try {
			this.state = 115;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 113;
				this.ifConditional();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 114;
				this.ifElseConditional();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifConditional(): IfConditionalContext {
		let _localctx: IfConditionalContext = new IfConditionalContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, tlangParser.RULE_ifConditional);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this.match(tlangParser.T__3);
			this.state = 118;
			this.condition(0);
			this.state = 119;
			this.match(tlangParser.T__4);
			this.state = 120;
			this.strict_ilist();
			this.state = 121;
			this.match(tlangParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifElseConditional(): IfElseConditionalContext {
		let _localctx: IfElseConditionalContext = new IfElseConditionalContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, tlangParser.RULE_ifElseConditional);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.match(tlangParser.T__3);
			this.state = 124;
			this.condition(0);
			this.state = 125;
			this.match(tlangParser.T__4);
			this.state = 126;
			this.strict_ilist();
			this.state = 127;
			this.match(tlangParser.T__5);
			this.state = 128;
			this.match(tlangParser.T__6);
			this.state = 129;
			this.match(tlangParser.T__4);
			this.state = 130;
			this.strict_ilist();
			this.state = 131;
			this.match(tlangParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public loop(): LoopContext {
		let _localctx: LoopContext = new LoopContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, tlangParser.RULE_loop);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this.match(tlangParser.T__7);
			this.state = 134;
			this.value();
			this.state = 135;
			this.match(tlangParser.T__4);
			this.state = 136;
			this.strict_ilist();
			this.state = 137;
			this.match(tlangParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public moveCommand(): MoveCommandContext {
		let _localctx: MoveCommandContext = new MoveCommandContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, tlangParser.RULE_moveCommand);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 139;
			this.moveOp();
			this.state = 140;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public moveOp(): MoveOpContext {
		let _localctx: MoveOpContext = new MoveOpContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, tlangParser.RULE_moveOp);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 142;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << tlangParser.T__8) | (1 << tlangParser.T__9) | (1 << tlangParser.T__10) | (1 << tlangParser.T__11))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public penCommand(): PenCommandContext {
		let _localctx: PenCommandContext = new PenCommandContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, tlangParser.RULE_penCommand);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 144;
			_la = this._input.LA(1);
			if (!(_la === tlangParser.T__12 || _la === tlangParser.T__13)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public gotoCommand(): GotoCommandContext {
		let _localctx: GotoCommandContext = new GotoCommandContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, tlangParser.RULE_gotoCommand);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 146;
			this.match(tlangParser.T__14);
			this.state = 147;
			this.match(tlangParser.T__15);
			this.state = 148;
			this.expression(0);
			this.state = 149;
			this.match(tlangParser.T__16);
			this.state = 150;
			this.expression(0);
			this.state = 151;
			this.match(tlangParser.T__17);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pauseCommand(): PauseCommandContext {
		let _localctx: PauseCommandContext = new PauseCommandContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, tlangParser.RULE_pauseCommand);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 153;
			this.match(tlangParser.T__18);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public printfCommand(): PrintfCommandContext {
		let _localctx: PrintfCommandContext = new PrintfCommandContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, tlangParser.RULE_printfCommand);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 155;
			this.match(tlangParser.T__19);
			this.state = 156;
			this.match(tlangParser.T__15);
			this.state = 157;
			this.printList();
			this.state = 158;
			this.match(tlangParser.T__17);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public printArg(): PrintArgContext {
		let _localctx: PrintArgContext = new PrintArgContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, tlangParser.RULE_printArg);
		try {
			this.state = 162;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case tlangParser.T__15:
			case tlangParser.MINUS:
			case tlangParser.NUM:
			case tlangParser.VAR:
			case tlangParser.NAME:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 160;
				this.expression(0);
				}
				break;
			case tlangParser.STRING:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 161;
				this.match(tlangParser.STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public printList(): PrintListContext {
		let _localctx: PrintListContext = new PrintListContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, tlangParser.RULE_printList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
			this.printArg();
			this.state = 169;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === tlangParser.T__16) {
				{
				{
				this.state = 165;
				this.match(tlangParser.T__16);
				this.state = 166;
				this.printArg();
				}
				}
				this.state = 171;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDecl(): FunctionDeclContext {
		let _localctx: FunctionDeclContext = new FunctionDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, tlangParser.RULE_functionDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 172;
			this.match(tlangParser.T__20);
			this.state = 173;
			this.match(tlangParser.NAME);
			this.state = 174;
			this.match(tlangParser.T__15);
			this.state = 176;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === tlangParser.VAR) {
				{
				this.state = 175;
				this.paramList();
				}
			}

			this.state = 178;
			this.match(tlangParser.T__17);
			this.state = 179;
			this.match(tlangParser.T__4);
			this.state = 180;
			this.strict_ilist();
			this.state = 181;
			this.match(tlangParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public paramList(): ParamListContext {
		let _localctx: ParamListContext = new ParamListContext(this._ctx, this.state);
		this.enterRule(_localctx, 38, tlangParser.RULE_paramList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 183;
			this.match(tlangParser.VAR);
			this.state = 188;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === tlangParser.T__16) {
				{
				{
				this.state = 184;
				this.match(tlangParser.T__16);
				this.state = 185;
				this.match(tlangParser.VAR);
				}
				}
				this.state = 190;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionCallCommand(): FunctionCallCommandContext {
		let _localctx: FunctionCallCommandContext = new FunctionCallCommandContext(this._ctx, this.state);
		this.enterRule(_localctx, 40, tlangParser.RULE_functionCallCommand);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 191;
			this.functionCall();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionCall(): FunctionCallContext {
		let _localctx: FunctionCallContext = new FunctionCallContext(this._ctx, this.state);
		this.enterRule(_localctx, 42, tlangParser.RULE_functionCall);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 193;
			this.match(tlangParser.NAME);
			this.state = 194;
			this.match(tlangParser.T__15);
			this.state = 196;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 16)) & ~0x1F) === 0 && ((1 << (_la - 16)) & ((1 << (tlangParser.T__15 - 16)) | (1 << (tlangParser.MINUS - 16)) | (1 << (tlangParser.NUM - 16)) | (1 << (tlangParser.VAR - 16)) | (1 << (tlangParser.NAME - 16)))) !== 0)) {
				{
				this.state = 195;
				this.argList();
				}
			}
